implementations/rust/ockam/ockam/tests/node_attribute/fails_if_passed_param_is_wrong_type_using_use_statement.stderr
error: Expected `ockam::Context` found `String`
 --> $DIR/fails_if_passed_param_is_wrong_type_using_use_statement.rs:8:20
  |
8 | async fn main(ctx: String) {}
  |                    ^^^^^^

warning: unused import: `std::string::String`
 --> $DIR/fails_if_passed_param_is_wrong_type_using_use_statement.rs:5:5
  |
5 | use std::string::String;
  |     ^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

error[E0601]: `main` function not found in crate `$CRATE`
 --> $DIR/fails_if_passed_param_is_wrong_type_using_use_statement.rs:5:1
  |
5 | / use std::string::String;
6 | |
7 | | #[ockam::node]
8 | | async fn main(ctx: String) {}
  | |_____________________________^ consider adding a `main` function to `$DIR/tests/node_attribute/fails_if_passed_param_is_wrong_type_using_use_statement.rs`
